--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,4 +1,4 @@
-- import_playbook: ./kubespray/cluster.yml
+#- import_playbook: ./kubespray/cluster.yml
 
 - hosts: kube1
   become: true
@@ -10,5 +10,5 @@
     - role: k8s-namespace
     - role: k8s-rancher-local-path-provisioner
     - role: k8s-elasticsearch-cluster
-    - { role: k8s-fluentd-elasticsearch, fluentd_elasticsearch_helm_release: "fluentd" }
+    - { role: k8s-filebeat, filebeat_helm_release: "filebeat" }
     - { role: k8s-kibana, kibana_helm_release: "kibana" }
